# PraisonAI-SVC

./: .gitignore  DEPLOYMENT.md  PERFORMANCE.md  PRD.md  PROJECT_STRUCTURE.md  README.md  RELEASE_READY.md  TEST_REPORT.md  VALIDATION_SUMMARY.md  check-azure.sh  deploy.sh  k6-load-test.js  pyproject.toml  test-performance.sh  test_live_service.py
defensive-packages/praisonai-svcs/: README.md  pyproject.toml
defensive-packages/praisonai_svc/: README.md  pyproject.toml
defensive-packages/praisonaisvc/: README.md  pyproject.toml
src/praisonai_svc/: cli.py
tests/: AUTOTESTING.md  README.md  k6-load-test.js  test-performance.sh
